# EzProtocolSerializer

./: .gitignore  LICENSE  README.md
example/: CMakeLists.txt
example/src/: creator_widget.cpp  creator_widget.h  editor_widget.cpp  editor_widget.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  validators.cpp  validators.h  visualizer_widget.cpp  visualizer_widget.h  visualizer_widget.ui
example/src/gui_elements/: creator_widget.cpp  creator_widget.h  editor_widget.cpp  editor_widget.h  main_window.cpp  main_window.h  main_window.ui  visualizer_widget.cpp  visualizer_widget.h
example/src/utils/: validators.cpp  validators.h
include/: ez_protocol_serializer.cpp  ez_protocol_serializer.h
src/: ez_protocol_serializer.cpp  ez_protocol_serializer.h
tests/: CMakeLists.txt  ez_protocol_serializer_tests.cpp
